RET-4822 (#2689)
* Refactor hearing date handling to sort dates chronologically and improve null handling

* Apply suggestion from @btensay

Co-authored-by: btensay <tensay.bulcha@gmail.com>

* Add import for Objects utility to enhance null checks

---------

Co-authored-by: btensay <tensay.bulcha@gmail.com>